syntax = "proto3";

package article;

option java_multiple_files = true;
option java_package = "head4.notify.grpc";
option java_outer_classname = "ArticleProto";

service ArticleService {
  rpc CreateArticle (ArticleRequest) returns (ArticleResponse);
}

message ArticleRequest {
  string school = 1;
  repeated ArticleDetail articleDetails = 2;
}

message ArticleDetail {
  int32 campus = 1;
  string title = 2;
  string article_num = 3;
  string article_url = 4;
}

message ArticleResponse {
  bool success = 1;
  string message = 2;
}
